--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,23 +7,25 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="container">
-  <div id="user_nav">
+
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <% if user_signed_in? %>
-      Brewing for: <strong><%= current_user.email %></strong>.
+      Brewing for: <strong><%= current_user.name %></strong>.
+      
       <%= link_to 'Edit profile', edit_user_registration_path %> |
       <%= link_to "Logout", destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to "Sign up", new_user_registration_path %> |
       <%= link_to "Log in", new_user_session_path %>
     <% end %>
-  </div>
+  </nav>
+  
   <title><%= yield(:title) %></title>
 
   <% flash.each do |name, msg| %>
     <%= content_tag :div, msg, id: "flash_#{name}" %>
   <% end %>
-
+<div class="container">
 <%= yield %>
 </div>
 </body>
